--- a/templates/setup.html
+++ b/templates/setup.html
@@ -8,9 +8,19 @@
 <!-- Tab content -->
 <!-- container -->
 <div class="card mt-3">
-  <h5 class="card-header bg-dark bg-gradient text-white">Monitor And Setup</h5>
+  <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Monitor And Setup 
+    <div class="select-wrapper mb-2 ">
+      <select id="selectionGP" class="select select-initialized">
+          <option value="" disabled selected>Choose Phase</option>
+          <option value="all">All</option>
+          <option value="P4">OP2 Phase 4</option>
+          <option value="P5">OP2 Phase 5</option>
+          <option value="P9">OP2 Phase 9</option>
+      </select>
+  </div>
+  </h5>
     <div class="card-body">
-      <table id="example" class="table align-middle mb-0 bg-white">
+      <table  class="table align-middle mb-0 bg-white">
         <thead class="bg-light">
           <tr>
             <th>Site</th>
@@ -19,8 +29,8 @@
             <th>Input High Water</th>
             <th>Off-set (+) Water</th>
             <th>Off-set (-) Water</th>
-            <th>Input Low Temp</th>
-            <th>Input High Temp</th>
+            <!-- <th>Input Low Temp</th>
+            <th>Input High Temp</th> -->
             <th>Off-set (+) Temp</th>
             <th>Off-set (-) Temp</th>
           </tr>
@@ -46,12 +56,12 @@
             <td>
                 <input type="text" class="form-control" value={{ setup['Minus_Water'] }}>
             </td>
-            <td>
+            <!-- <td>
               <input type="text" class="form-control" value={{ setup['Low_Temp'] }}>
           </td>
           <td>
               <input type="text" class="form-control" value={{ setup['Hight_Temp'] }}>
-          </td>
+          </td> -->
           <td>
               <input type="text" class="form-control" value={{ setup['Plus_Temp'] }}> 
           </td>
@@ -71,16 +81,6 @@
 {% endblock %}
 {% block script %}
 <script>
-  $(document).ready(function () {
-    $('table.display').DataTable({
-      pagingType: 'full_numbers',
-      scrollY: '200px',
-      scrollCollapse: true,
-      pageLength: 5,
-      lengthMenu: [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],
-    });
-
-  });
     $(document).ready(function () {
     var table = $('#example').DataTable({
         columnDefs: [
