--- a/templates/add.html
+++ b/templates/add.html
@@ -6,6 +6,11 @@
 <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css" />
+<link
+      href="{{ url_for('static', filename='css/custom-size.css') }}"
+      rel="stylesheet"
+    />
 {% endblock %}
 {% block content %}
 
@@ -130,7 +135,7 @@
     <div class="card-body">
       <form >
         
-        <table class="display table align-middle mb-0 bg-white">
+        <table class="display table align-middle mb-0 bg-white" id="alldevice">
           <thead class="bg-light">
             <tr>
               <th>IP</th>
@@ -148,34 +153,52 @@
             <tr>
               <td>
                 <div class="d-flex align-items-center">
-                  <p class="fw-bold mb-1">{{ edit_delete['Ip'] }}</p>
+                  <!--<input type="text" class="form-control" name="Ip_{{ edit_delete['Ip'] }}" id="Ip_{{ edit_delete['Ip'] }}"
+                  value={{ edit_delete['Ip'] }}>-->
+                  <p>{{ edit_delete['Ip'] }}</p>
                 </div>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Port'] }}</p>
+                <!--<input type="text" class="form-control" name="Port_{{ edit_delete['Port'] }}" id="Port_{{ edit_delete['Port'] }}"
+                  value={{ edit_delete['Port'] }}>-->
+                  <p>{{ edit_delete['Port'] }}</p>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Station'] }}</p>
+                <!--<input type="text" class="form-control" name="Station_{{ edit_delete['Station'] }}" id="Station_{{ edit_delete['Station'] }}"
+                  value={{ edit_delete['Station'] }}>-->
+                  <p>{{ edit_delete['Station'] }}</p>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Phase'] }}</p>
+                <!--<input type="text" class="form-control" name="Phase_{{ edit_delete['Phase'] }}" id="Phase_{{ edit_delete['Phase'] }}"
+                  value="{{ edit_delete['Phase'] }}">-->
+                  <p>{{ edit_delete['Phase'] }}</p>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Site'] }}</p>
+                <p>{{ edit_delete['Site'] }}</p>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Slot_Water'] }}</p>
+                <!--<input type="text" class="form-control" name="Slot_Water_{{ edit_delete['Slot_Water'] }}" id="Slot_Water_{{ edit_delete['Slot_Water'] }}"
+                  value={{ edit_delete['Slot_Water'] }}>-->
+                  <p>{{ edit_delete['Slot_Water'] }}</p>
               </td>
               <td>
-                <p class="text-muted mb-0">{{ edit_delete['Slot_Temp'] }}</p>
+                <!--<input type="text" class="form-control" name="Slot_Temp_{{ edit_delete['Slot_Temp'] }}" id="Slot_Temp_{{ edit_delete['Slot_Temp'] }}"
+                  value={{ edit_delete['Slot_Temp'] }}>-->
+                  <p>{{ edit_delete['Slot_Temp'] }}</p>
               </td>
-              <td>
-                <button value="{{ edit_delete['Site'] }}" name="edit_delete" type="button" class="btn btn-link btn-sm text-bg-primary edit">
-                  Edit
-                </button>
-                <button value="{{ edit_delete['Site'] }}" name="edit_delete" type="button" class="btn btn-link btn-sm text-bg-danger delete">
-                  Delete
-                </button>
+              <td >
+                <div class="row g-2">
+                  <div class="col-6">
+                    <button value="{{ edit_delete['Site'] }}" name="Edit" type="button" class="btn btn-link btn-sm text-bg-primary Edit">
+                      Edit
+                    </button>
+                  </div>
+                  <div class="col-6 ">
+                    <button value="{{ edit_delete['Site'] }}" name="delete" type="button" class="btn btn-link btn-sm text-bg-danger delete">
+                      Delete
+                    </button>
+                  </div>
+                </div>
               </td>
             </tr>
             {% endfor %}
@@ -200,7 +223,7 @@
       lengthMenu: [ [5, 10, 25, 50, -1], [5, 10, 25, 50, "All"] ],
     });
 });
-</script>
+</script> 
 <!--Select Phase in Add Device-->
 <script>
     "use strict";
@@ -329,4 +352,11 @@
   });
 </script>
 <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
+<script>
+  $( ".Edit" ).click(function() {
+    window.open("edit?edit=" + $(this).val(), "_blank", 
+    "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=300,width=800,height=500");
+    console.log($(this).val())
+  })
+  </script>
 {% endblock %}
