--- a/templates/edit_device.html
+++ b/templates/edit_device.html
@@ -1,5 +1,40 @@
 <html>
 <head>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+    crossorigin="anonymous"
+      />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Notifications -->
+    <link
+      href="{{ url_for('static', filename='css/notification.css') }}"
+      rel="stylesheet"
+    />
+    <!-- scrollbar -->
+    <link
+      href="{{ url_for('static', filename='css/tableScroll.css') }}"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.js"
+    ></script>
     <!-- script pagination -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
@@ -12,72 +47,56 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-  <div class="card mt-3">
-    <div class="card-header bg-dark bg-gradient text-white">Edit</div>
-    <div class="card-body">
-      <form action="{{ url_for('edit_value') }}" method='POST'>
-      <table class="display table align-middle mb-0 bg-white" id="alldevice">
-        <thead class="bg-light">
-          <tr>
-            <th>Site</th>
-            <th>IP</th>
-            <th>Port</th>
-            <th>Station</th>
-            <th>Phase</th>
-            <th>Slot water</th>
-            <th>Slot Temp</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for edit_delete in edit %}
-          <tr>
-            <td>
-              <input type="hidden" class="form-control" name="{{ edit_delete['Site'] }}" id="{{ edit_delete['Site'] }}"
+  <!-- form Edit -->
+  <div class="row">
+    <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="card">
+          {% for edit in edit %}
+          <div class="card-header bg-primary bg-gradient text-white">Eidt for {{edit['Site']}}</div>
+          {% endfor %}
+            <div class="card-body">
+              <form action="{{ url_for('edit_value') }}" method='POST'>
+              <div class="form-group">
+                {% for edit_delete in edit %}
+                <input type="hidden" class="form-control" name="{{ edit_delete['Site'] }}" id="{{ edit_delete['Site'] }}" 
                 value={{ edit_delete['Site'] }}>
-            </td>
-            <td>
-              <div class="d-flex align-items-center">
+                <label for="IP">IP</label>
                 <input type="text" class="form-control" name="Ip{{ edit_delete['Site'] }}" id="Ip{{ edit_delete['Site'] }}"
                 value={{ edit_delete['Ip'] }}>
-              </div>
-            </td>
-            <td>
-              <input type="text" class="form-control" name="Port{{ edit_delete['Site'] }}" id="Port{{ edit_delete['Site'] }}"
+                <label for="Port">Port</label>
+                <input type="text" class="form-control" name="Port{{ edit_delete['Site'] }}" id="Port{{ edit_delete['Site'] }}"
                 value={{ edit_delete['Port'] }}>
-            </td>
-            <td>
+                <label for="Station">Station</label>
                 <select id="inputOP" name="inputOP" class="form-control inputOP">
                   <option value="{{ edit_delete['Station'] }}">{{ edit_delete['Station'] }}</option>
                 </select>
-            </td>
-            <td>
-              <select id="inputPhase" name="Phase{{ edit_delete['Site'] }}" class="form-control inputPhase">
-                <option value="{{ edit_delete['Phase'] }}">{{ edit_delete['Phase'] }}</option>
-              </select>
-            </td>
-            <td>
-              <select id="Water" name="Slot_Water{{ edit_delete['Site'] }}" class="form-control">
-                <option value="{{ edit_delete['Slot_Water'] }}">{{ edit_delete['Slot_Water'] }}</option>
-              </select>
-              <!--<input type="text" class="form-control" name="Slot_Water{{ edit_delete['Site'] }}" id="Slot_Water{{ edit_delete['Site'] }}"
-                value={{ edit_delete['Slot_Water'] }}>-->
-            </td>
-            <td>
-              <select id="Slot_temp" name="Slot_Temp{{ edit_delete['Site'] }}" class="form-control">
-                <option value="{{ edit_delete['Slot_Temp'] }}">{{ edit_delete['Slot_Temp'] }}</option>
-              </select>
-              <!--<input type="text" class="form-control" name="Slot_Temp{{ edit_delete['Site'] }}" id="Slot_Temp{{ edit_delete['Site'] }}"
-                value={{ edit_delete['Slot_Temp'] }}>-->
-            </td>
-          </tr>
-          <input type="hidden" value="{{ edit_delete['Site'] }}" name="{{ edit_delete['Site'] }}">
-          {% endfor %}
-        </tbody>
-      </table>
-      <button type="submit" class="btn btn-link btn-sm text-bg-primary Edit">Edit</button>
-      </form>
+                <label for="Phase">Phase</label>
+                <select id="inputPhase" name="Phase{{ edit_delete['Site'] }}" class="form-control inputPhase">
+                  <option value="{{ edit_delete['Phase'] }}">{{ edit_delete['Phase'] }}</option>
+                </select>
+                <label for="Water">Slot Water</label>
+                <select id="Water" name="Slot_Water{{ edit_delete['Site'] }}" class="form-control">
+                  <option value="{{ edit_delete['Slot_Water'] }}">{{ edit_delete['Slot_Water'] }}</option>
+                </select>
+                <label for="Slot_Temp">Slot Temp</label>
+                <select id="Slot_temp" name="Slot_Temp{{ edit_delete['Site'] }}" class="form-control">
+                  <option value="{{ edit_delete['Slot_Temp'] }}">{{ edit_delete['Slot_Temp'] }}</option>
+                </select>
+                {% endfor %}
+              </div>
+              <button type="submit" class="btn btn-primary mt-3 Edit">Edit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="col-md-3"></div>
   </div>
+  <!-- End form Edit -->
+      <script>
+      </script>
       <script>
         $(document).ready(function () {
           $('table.display').DataTable({
@@ -115,9 +134,12 @@
       <script>
         "use strict";
         var slot = {{ slot|default("")|tojson }};
-
+        
         var Water = $('select#Water');
         var Slot_temp = $('select#Slot_temp');
+
+        var default_water = $('select#Water').val()
+        var default_temp = $('select#Slot_temp').val()
 
         for (var i = 1; i < 15; i++) {
           Water.append($('<option/>', {'value': i, 'text': i}));
@@ -128,11 +150,15 @@
           $('select').find('option[value="' + key +'"]').prop('disabled', true);
         }
 
+        console.log($('select#Water').val())
+        var water_select = document.getElementById(Water);
+
         $('select').change(function(){
-          
+
           var notAllowed = $(this).find('option:selected').data('notallowed');
           var currentValue = $(this).val();
-          var oldValue = $(this).data('old');
+          var oldValue = $(this).data('old')
+
 
           $(this).data('old', currentValue);
           if(oldValue) {
