--- a/templates/line.html
+++ b/templates/line.html
@@ -2,256 +2,91 @@
 {% block title %}Real-Time Charts{% endblock %}
 {% block head %}
 <script src="{{ url_for('static', filename='js/line.js') }}"></script>
+<!-- script pagination -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<!-- css pagination -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
 {% block content %}
 
 <div class="card ">
     <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">
       Overview Report Deionized water
-      <div class="select-wrapper">
-        <select id="selectionGP" class="select select-initialized">
-            <option value="" disabled selected>Choose Phase</option>
-            <option value="all">All</option>
-            <option value="P4">OP2 Phase 4</option>
-            <option value="P5">OP2 Phase 5</option>
-            <option value="P9">OP2 Phase 9</option>
-        </select>
-    </div>
     </h5>
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
-                <div id="linechartP4" class="display dataP4" style="height: 18rem;"></div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
-                <table class="display table align-middle mb-0 bg-white">
-                    <thead class="bg-light">
-                      <tr>
-                        <th>Date</th>
-                        <th>Phase</th>
-                        <th>Machine</th>
-                        <th>StatusDIWater</th>
-                        <th>DIWater</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 4</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0 ">15</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 2</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">14</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Robot</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">13</p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-            </div>
+    <div class="card-body pt-0">
+      <div class="card mt-3">
+        <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
+        <div class="card-body">
+          <div id="linechartP4" class="display dataP4"></div>
         </div>
       </div>
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
-                <div id="linechartP5" class="display dataP5" style="height: 18rem;"></div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
-                <table class="display table align-middle mb-0 bg-white">
-                    <thead class="bg-light">
-                      <tr>
-                        <th>Date</th>
-                        <th>Phase</th>
-                        <th>Machine</th>
-                        <th>StatusDIWater</th>
-                        <th>DIWater</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 4</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0 ">15</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 2</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">14</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Robot</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">13</p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-            </div>
-        </div>
+      <div class="card mb-3 mt-3">
+        <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
+        
+        <table class="display table align-middle mb-0 bg-white">
+            <thead class="bg-light">
+              <tr>
+                <th>Date</th>
+                <th>Phase</th>
+                <th>Site</th>
+                <th>StatusDIWater</th>
+                <th>DIWater</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for report in report %}
+              <tr>
+                <td>
+                  <p class="text-muted mb-0">{{ report['Date'] }}</p>
+                </td>
+                <td>
+                  <p class="text-muted mb-0">{{ report['Phase'] }}</p>
+                </td>
+                <td>
+                  <p class="text-muted mb-0">{{ report['Site'] }}</p>
+                </td>
+                <td class="bg-success" name="{{ report['Site'] }}">
+                  <p name="{{ report['Site'] }}" class="mb-0 Status{{ report['Site'] }}">Pass</p>
+                </td>
+                <td>
+                  <p class="text-muted mb-0">{{ report['Water'] }}</p>
+                  <input type="hidden" name="data{{ report['Site'] }}"  value="{{ report['Water'] }}">
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
       </div>
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Monthly Deionized water</h6>
-                <div id="linechartP9" class="display dataP9" style="height: 18rem;"></div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
-                <table class="display table align-middle mb-0 bg-white">
-                    <thead class="bg-light">
-                      <tr>
-                        <th>Date</th>
-                        <th>Phase</th>
-                        <th>Machine</th>
-                        <th>StatusDIWater</th>
-                        <th>DIWater</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 4</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0 ">15</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Fisa 2</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">14</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p class="text-muted mb-0">17/08/2022</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">Robot</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">control</p>
-                        </td>
-                        <td class="bg-success">
-                          <p class="text-muted mb-0 ">pass</p>
-                        </td>
-                        <td>
-                          <p class="text-muted mb-0">13</p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-            </div>
-        </div>
-      </div>
+    </div>  
 </div>
 
 {% endblock %}
 {% block script %}
-
+<script>
+  {% for reportscript in report %}
+  if ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() > 12){
+    $('p[name="{{ reportscript['Site'] }}"]').text("Pass");
+  } else if ((10 < $( 'input[name="data{{ reportscript['Site'] }}"]' ).val()) && ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() < 12)) {
+    $('p[name="{{ reportscript['Site'] }}"]').text("Monitor");
+    $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
+    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-warning");
+  } else if ($('input[name="data{{ reportscript['Site'] }}"]' ).val() < 10) {
+    $('p[name="{{ reportscript['Site'] }}"]').text("Error");
+    $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
+    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-danger");
+  }
+  {% endfor %}
+</script>
+<script>
+  $(document).ready(function () {
+    $('table.display').DataTable({
+      pagingType: 'full_numbers',
+      scrollY: '500px',
+      scrollCollapse: true,
+      pageLength: 20,
+      lengthMenu: [ [20, 30, 40, 50, -1], [20, 30, 40, 50, "All"] ],
+    });
+});
+</script>
 {% endblock %}
