--- a/templates/alert.html
+++ b/templates/alert.html
@@ -9,8 +9,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
 
-<script src="{{ url_for('node_modules', filename='pdfmake/build/pdfmake.js') }}"></script>
-<script src="{{ url_for('node_modules', filename='pdfmake/build/vfs_fonts.js') }}"></script>
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
 {% endblock %}
@@ -50,7 +48,7 @@
           {% endfor %}
         </tbody>
       </table>
-      <input id="make-pdf" type="button" onclick="" value="Export To PDF" />
+      <a href="{{ url_for('download') }}">Generate Pdf Report</a>
     </div>
 </div>
 {% endblock %}
